Сделал кнопочки на странице все заявки

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@
 /*Параметры для тела*/
 body{
     color: white; /*Цвет текста*/
-    background: #DD4C41; /*Задний фон*/
+    background: #dd4c41; /*Задний фон*/
 }
 
 /*Ширина scrollbar*/
